feat: add header, nav and section 'about'

--- a/index.html
+++ b/index.html
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Page Title</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h1>Ivan Kolesov</h1>
+        <ul class="nav-list">
+          <li сlass="nav-item">
+            <a class="nav-link" href="#about">About me</a>
+          </li>
+          <li сlass="nav-item">
+            <a class="nav-link" href="#contacts">Contacts</a>
+          </li>
+          <li сlass="nav-item"><a class="nav-link" href="#">Skills</a></li>
+          <li сlass="nav-item"><a class="nav-link" href="#">Education</a></li>
+          <li сlass="nav-item"><a class="nav-link" href="#">Projects</a></li>
+          <li сlass="nav-item"><a class="nav-link" href="#">Languages</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="about" id="about">
+        <div class="avatar">
+          <img
+            class="avatar-image"
+            src="https://www.befunky.com/images/prismic/5ddfea42-7377-4bef-9ac4-f3bd407d52ab_landing-photo-to-cartoon-img5.jpeg?auto=avif,webp&format=jpg&width=863"
+            alt="My photo"
+          />
+        </div>
+        <div class="about-description">
+          <h2 class="about-title">About me</h2>
+          <p class="about-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            quas aliquam laudantium modi. Reprehenderit, aperiam voluptate,
+            atque illo quia laborum recusandae iure, a autem dolore magni nemo
+            voluptates laudantium? Obcaecati soluta, odio mollitia in beatae
+            tempora quod voluptatum autem, sed voluptatem fugiat distinctio
+            molestias quasi perspiciatis iusto amet tenetur nulla minima dolores
+            eos illo! Cumque, quibusdam. Obcaecati, laboriosam corporis omnis
+            atque eum veniam ea vitae illo animi, distinctio explicabo
+            blanditiis architecto dolor consectetur? Architecto, dolorum labore
+            aliquam atque totam quis rerum unde maiores. Excepturi animi
+            mollitia aut delectus modi odio consequatur et veniam amet
+            explicabo, temporibus aperiam non quisquam ad.
+          </p>
+        </div>
+      </section>
+      <section class="contacts" id="contacts"></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
