feat: change background and add card blur

--- a/index.html
+++ b/index.html
@@ -52,7 +52,29 @@
           </p>
         </div>
       </section>
-      <section class="contacts" id="contacts"></section>
+      <section class="contacts" id="contacts">
+        <div class="contacts-description">
+          <h2 class="about-title">Contacts</h2>
+          <p class="about-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            quas aliquam laudantium modi. Reprehenderit, aperiam voluptate,
+            atque illo quia laborum recusandae iure, a autem dolore magni nemo
+            voluptates laudantium? Obcaecati soluta, odio mollitia in beatae
+            tempora quod voluptatum autem, sed voluptatem fugiat distinctio
+            molestias quasi perspiciatis iusto amet tenetur nulla minima dolores
+            eos illo! Cumque, quibusdam. Obcaecati, laboriosam corporis omnis
+            atque eum veniam ea vitae illo animi, distinctio explicabo
+            blanditiis architecto dolor consectetur? Architecto, dolorum labore
+            aliquam atque totam quis rerum unde maiores. Excepturi animi
+            mollitia aut delectus modi odio consequatur et veniam amet
+            explicabo, temporibus aperiam non quisquam ad.
+          </p>
+          <p><b> Address:</b> Russian Federation, Moscow region, Serpukhov </p>
+          <p><b> Telegram:</b> <a href="https://t.me/QwertykQwertov">@QwertykQwertov</a></p>
+          <p><b> E-mail:</b> qwertykqwertov@gmail.com</p>
+          <p><b> GitHub:</b><a href="https://github.com/QwertykQwertov">QwertykQwertov</a></p>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
