feat: add skills block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <a class="nav-link" href="#about">About me</a>
       <a class="nav-link" href="#contacts">Contacts</a>
-      <a class="nav-link" href="#">Skills</a>
+      <a class="nav-link" href="#skills">Skills</a>
       <a class="nav-link" href="#">Education</a>
       <a class="nav-link" href="#">Projects</a>
       <a class="nav-link" href="#">Languages</a>
@@ -48,28 +48,60 @@
     </section>
     <section class="contacts" id="contacts">
       <div class="contacts-description">
-        <h2 class="about-title">Contacts</h2>
-        <p class="about-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-          quas aliquam laudantium modi. Reprehenderit, aperiam voluptate,
-          atque illo quia laborum recusandae iure, a autem dolore magni nemo
-          voluptates laudantium? Obcaecati soluta, odio mollitia in beatae
-          tempora quod voluptatum autem, sed voluptatem fugiat distinctio
-          molestias quasi perspiciatis iusto amet tenetur nulla minima dolores
-          eos illo! Cumque, quibusdam. Obcaecati, laboriosam corporis omnis
-          atque eum veniam ea vitae illo animi, distinctio explicabo
-          blanditiis architecto dolor consectetur? Architecto, dolorum labore
-          aliquam atque totam quis rerum unde maiores. Excepturi animi
-          mollitia aut delectus modi odio consequatur et veniam amet
-          explicabo, temporibus aperiam non quisquam ad.
-        </p>
-        <p><b> Address:</b> Russian Federation, Moscow region, Serpukhov </p>
+        <h2 class="contact-title">Contacts</h2>
+        <p><b> Location:</b> Russian Federation, Moscow region, Serpukhov </p>
         <p><b> Telegram:</b> <a href="https://t.me/QwertykQwertov">@QwertykQwertov</a></p>
         <p><b> E-mail:</b> qwertykqwertov@gmail.com</p>
         <p><b> GitHub: </b><a href="https://github.com/QwertykQwertov">QwertykQwertov</a></p>
       </div>
     </section>
-    <section></section>
+    <section class="skills" id="skills">
+      <div class="skills-description">
+        <h2 class="skills-title">Skills</h2>
+        <div class="skills-card-wrapper">
+          <div class="skill-card">
+            <img src="" alt="HTML icon" class="skill-img">
+            <p class="skill-name">HTML</p>
+            </img>
+          </div>
+          <div class="skill-card">
+            <img src="" alt="CSS icon" class="skill-img">
+            <p class="skill-name">CSS</p>
+            </img>
+          </div>
+          <div class="skill-card">
+            <img src="" alt="JS icon" class="skill-img">
+            <p class="skill-name">JavaScript</p>
+            </img>
+          </div>
+          <div class="skill-card">
+            <img src="" alt="Vue icon" class="skill-img">
+            <p class="skill-name">Vue2</p>
+            </img>
+          </div>
+          <div class="skill-card">
+            <img src="" alt="DevExtreme icon" class="skill-img">
+            <p class="skill-name">DevExtreme</p>
+            </img>
+          </div>
+          <div class="skill-card">
+            <img src="" alt="Git icon" class="skill-img">
+            <p class="skill-name">Git</p>
+            </img>
+          </div>
+          <div class="skill-card">
+            <img src="" alt="Linux icon" class="skill-img">
+            <p class="skill-name">Linux</p>
+            </img>
+          </div>
+          <div class="skill-card">
+            <img src="" alt="Figma icon" class="skill-img">
+            <p class="skill-name">Figma</p>
+            </img>
+          </div>
+        </div>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
