feat: edit skills and add projects block

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <a class="nav-link" href="#about">About me</a>
       <a class="nav-link" href="#contacts">Contacts</a>
       <a class="nav-link" href="#skills">Skills</a>
-      <a class="nav-link" href="#">Education</a>
-      <a class="nav-link" href="#">Projects</a>
-      <a class="nav-link" href="#">Languages</a>
+      <a class="nav-link" href="#education">Education</a>
+      <a class="nav-link" href="#projects">Projects</a>
+      <a class="nav-link" href="#languages">Languages</a>
     </nav>
   </header>
   <main>
@@ -30,6 +30,7 @@
       </div>
       <div class="about-description">
         <h2 class="about-title">About me</h2>
+        <hr>
         <p class="about-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
           quas aliquam laudantium modi. Reprehenderit, aperiam voluptate,
@@ -49,6 +50,7 @@
     <section class="contacts" id="contacts">
       <div class="contacts-description">
         <h2 class="contact-title">Contacts</h2>
+        <hr>
         <p><b> Location:</b> Russian Federation, Moscow region, Serpukhov </p>
         <p><b> Telegram:</b> <a href="https://t.me/QwertykQwertov">@QwertykQwertov</a></p>
         <p><b> E-mail:</b> qwertykqwertov@gmail.com</p>
@@ -58,51 +60,115 @@
     <section class="skills" id="skills">
       <div class="skills-description">
         <h2 class="skills-title">Skills</h2>
+        <hr>
         <div class="skills-card-wrapper">
           <div class="skill-card">
-            <img src="" alt="HTML icon" class="skill-img">
+            <img src="./assets/html.png" alt="HTML icon" class="skill-img">
             <p class="skill-name">HTML</p>
             </img>
           </div>
           <div class="skill-card">
-            <img src="" alt="CSS icon" class="skill-img">
+            <img src="./assets/free-icon-css-3-732190.png" alt="CSS icon" class="skill-img">
             <p class="skill-name">CSS</p>
             </img>
           </div>
           <div class="skill-card">
-            <img src="" alt="JS icon" class="skill-img">
+            <img src="./assets/free-icon-js-5968292.png" alt="JS icon" class="skill-img">
             <p class="skill-name">JavaScript</p>
             </img>
           </div>
           <div class="skill-card">
-            <img src="" alt="Vue icon" class="skill-img">
+            <img src="./assets/vue2.png" alt="Vue icon" class="skill-img">
             <p class="skill-name">Vue2</p>
             </img>
           </div>
           <div class="skill-card">
-            <img src="" alt="DevExtreme icon" class="skill-img">
+            <img src="./assets/devextreme.png" alt="DevExtreme icon" class="skill-img">
             <p class="skill-name">DevExtreme</p>
             </img>
           </div>
           <div class="skill-card">
-            <img src="" alt="Git icon" class="skill-img">
+            <img src="./assets/git.png" alt="Git icon" class="skill-img">
             <p class="skill-name">Git</p>
             </img>
           </div>
           <div class="skill-card">
-            <img src="" alt="Linux icon" class="skill-img">
+            <img src="./assets/linux.png" alt="Linux icon" class="skill-img">
             <p class="skill-name">Linux</p>
             </img>
           </div>
           <div class="skill-card">
-            <img src="" alt="Figma icon" class="skill-img">
+            <img src="./assets/figma.png" alt="Figma icon" class="skill-img">
             <p class="skill-name">Figma</p>
             </img>
           </div>
         </div>
       </div>
     </section>
-    <section></section>
+    <section class="projects" id="projects">
+      <div class="projects-description">
+        <h2 class="projects-title">Projects</h2>
+        <hr>
+        <div class="projects-card-wrapper">
+          <div class="projects-card">
+            <a href="https://chrome.google.com/webstore/detail/extension-for-behance-ima/pcgmjcfekkppafhcjbpajfgakmlmnbfn?" target="_blank">
+              <img src="./assets/extension.png" alt="HTML icon" class="projects-img">
+            </a>
+            <p class="projects-name">Extension for Behance images</p>
+          </div>
+          <div class="projects-card">
+            <a href="https://relocate.artydev.ru/" target="_blank">
+              <img src="./assets/relocate.png" alt="CSS icon" class="projects-img">
+            </a>
+            <p class="projects-name">Border crossing statistics</p>
+          </div>
+          <div class="projects-card">
+            <a href="https://qwertykqwertov.github.io/Snake-on-JS" target="_blank">
+              <img src="./assets/snake.png" alt="JS icon" class="projects-img">
+            </a>
+            <p class="projects-name">Snake on js</p>
+          </div>
+          <div class="projects-card">
+            <a href="https://qwertykqwertov.github.io/circle-rectangle/dist/" target="_blank">
+              <img src="./assets/circles.png" alt="Vue icon" class="projects-img">
+            </a>
+            <p class="projects-name">Simple test task</p>
+          </div>
+          <div class="projects-card">
+            <a href="https://qwertykqwertov.github.io/stepik" target="_blank">
+              <img src="./assets/landing.png" alt="DevExtreme icon" class="projects-img">
+            </a>
+            <p class="projects-name">Landing page</p>
+          </div>
+          <div class="projects-card">
+            <a href="https://qwertykqwertov.github.io/budgetList/dist" target="_blank">
+              <img src="./assets/budget.png" alt="Git icon" class="projects-img">
+            </a>
+            <p class="projects-name">Budget list</p>
+          </div>
+          <div class="projects-card">
+            <a href="https://qwertykqwertov.github.io/momentum" target="_blank">
+              <img src="./assets/momentum.png" alt="Linux icon" class="projects-img">
+            </a>
+            <p class="projects-name">Momentum</p>
+          </div>
+          <div class="projects-card">
+            <a href="https://qwertykqwertov.github.io/plants/" target="_blank">
+              <img src="./assets/plants.png" alt="Figma icon" class="projects-img">
+            </a>
+            <p class="projects-name">Plants</p>
+            </img>
+          </div>
+          <div class="projects-card">
+            <a href="https://qwertykqwertov.github.io/cssBayan/cssBayan" target="_blank">
+              <img src="./assets/accordeon.png" alt="Figma icon" class="projects-img">
+              <!-- <div class="overlay">Open deploy</div> -->
+            </a>
+            <p class="projects-name">Accordeon on CSS</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section></section>
     <section></section>
   </main>
