--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a class="nav-link" href="#about">About me</a>
       <a class="nav-link" href="#contacts">Contacts</a>
       <a class="nav-link" href="#skills">Skills</a>
-      <a class="nav-link" href="#education">Education</a>
       <a class="nav-link" href="#projects">Projects</a>
+      <a class="nav-link" href="#education">Education</a>
       <a class="nav-link" href="#languages">Languages</a>
     </nav>
   </header>
@@ -111,7 +111,8 @@
         <hr>
         <div class="projects-card-wrapper">
           <div class="projects-card">
-            <a href="https://chrome.google.com/webstore/detail/extension-for-behance-ima/pcgmjcfekkppafhcjbpajfgakmlmnbfn?" target="_blank">
+            <a href="https://chrome.google.com/webstore/detail/extension-for-behance-ima/pcgmjcfekkppafhcjbpajfgakmlmnbfn?"
+              target="_blank">
               <img src="./assets/extension.png" alt="HTML icon" class="projects-img">
             </a>
             <p class="projects-name">Extension for Behance images</p>
@@ -169,7 +170,24 @@
         </div>
       </div>
     </section>
-    <section></section>
+    <section class="education" id="education">
+      <div class="education-description">
+        <h2 class="education-title">Education</h2>
+        <hr>
+        <a href="#" target="_blank">Dubna State University, Russian Federation</a>
+        <p class="education-text">Informatics and Computer Engineering</p>
+        <a href="#" target="_blank">Higher school of economics, Russian Federation, Moscow</a>
+        <p class="education-text">Engineering in electronics, micro- and nanoelectronics</p>
+        <p>Courses:</p>
+        <a href="https://stepik.org/course/113393/syllabus" target="_blank">Site on Wordpress, Site layout and transfer
+          to CMS</a>
+        <a href="https://stepik.org/course/63054/promo#toc" target="_blank">Interactive SQL Trainer</a>
+        <a href="https://stepik.org/course/762/promo#toc" target="_blank">Linux Basics</a>
+        <a href="https://www.udemy.com/course/modern-javascript-from-beginning/" target="_blank">Modern JavaScript + Vue
+          from scratch on real
+          projects</a>
+      </div>
+    </section>
     <section></section>
   </main>
   <footer></footer>
