feat: add footer and change avatar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>Page Title</title>
+  <title>Ivan Kolesov</title>
 </head>
 
 <body>
@@ -21,11 +21,11 @@
       <a class="nav-link" href="#languages">Languages</a>
     </nav>
   </header>
-  <main>
+  <main >
     <section class="about" id="about">
       <div class="avatar">
         <img class="avatar-image"
-          src="https://www.befunky.com/images/prismic/5ddfea42-7377-4bef-9ac4-f3bd407d52ab_landing-photo-to-cartoon-img5.jpeg?auto=avif,webp&format=jpg&width=863"
+          src="./assets/avatar.jpg"
           alt="My photo" />
       </div>
       <div class="about-description">
@@ -171,26 +171,33 @@
       </div>
     </section>
     <section class="education" id="education">
+      <h2 class="education-title">Education</h2>
+      <hr>
       <div class="education-description">
-        <h2 class="education-title">Education</h2>
-        <hr>
+        <p style="margin: 10px 10px 0;">University:</p>
         <a href="#" target="_blank">Dubna State University, Russian Federation</a>
         <p class="education-text">Informatics and Computer Engineering</p>
         <a href="#" target="_blank">Higher school of economics, Russian Federation, Moscow</a>
         <p class="education-text">Engineering in electronics, micro- and nanoelectronics</p>
-        <p>Courses:</p>
+        <p style="margin: 10px 10px 0">Courses:</p>
         <a href="https://stepik.org/course/113393/syllabus" target="_blank">Site on Wordpress, Site layout and transfer
           to CMS</a>
         <a href="https://stepik.org/course/63054/promo#toc" target="_blank">Interactive SQL Trainer</a>
+        <a href="https://stepik.org/course/73/promo#toc">Introduction to Linux</a>
         <a href="https://stepik.org/course/762/promo#toc" target="_blank">Linux Basics</a>
         <a href="https://www.udemy.com/course/modern-javascript-from-beginning/" target="_blank">Modern JavaScript + Vue
           from scratch on real
           projects</a>
       </div>
     </section>
-    <section></section>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="footer">
+      <div class="footer-div empty"></div>
+      <div class="footer-div copyright"><a href="https://github.com/QwertykQwertov" target="_blank"> © 2023 by Ivan Kolesov</a></div>
+      <div class="footer-div rsschool"><a href="https://rs.school/" target="_blank">RS SCHOOL</a></div>
+    </div>
+  </footer>
 </body>
 
 </html>
