fix: offset on scroll link

--- a/index.html
+++ b/index.html
@@ -18,36 +18,28 @@
       <a class="nav-link" href="#skills">Skills</a>
       <a class="nav-link" href="#projects">Projects</a>
       <a class="nav-link" href="#education">Education</a>
-      <a class="nav-link" href="#languages">Languages</a>
     </nav>
   </header>
-  <main >
-    <section class="about" id="about">
+  <main>
+    <div class="offset" id="about"></div>
+    <section class="about">
       <div class="avatar">
-        <img class="avatar-image"
-          src="./assets/avatar.jpg"
-          alt="My photo" />
+        <img class="avatar-image" src="./assets/avatar.jpg" alt="My photo" />
       </div>
       <div class="about-description">
         <h2 class="about-title">About me</h2>
         <hr>
         <p class="about-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-          quas aliquam laudantium modi. Reprehenderit, aperiam voluptate,
-          atque illo quia laborum recusandae iure, a autem dolore magni nemo
-          voluptates laudantium? Obcaecati soluta, odio mollitia in beatae
-          tempora quod voluptatum autem, sed voluptatem fugiat distinctio
-          molestias quasi perspiciatis iusto amet tenetur nulla minima dolores
-          eos illo! Cumque, quibusdam. Obcaecati, laboriosam corporis omnis
-          atque eum veniam ea vitae illo animi, distinctio explicabo
-          blanditiis architecto dolor consectetur? Architecto, dolorum labore
-          aliquam atque totam quis rerum unde maiores. Excepturi animi
-          mollitia aut delectus modi odio consequatur et veniam amet
-          explicabo, temporibus aperiam non quisquam ad.
+          Hi, I'm Kolesov Ivan!
+          Currently I am a programmer. I specialize in front-end web development for more than 1 year.
+          Graduated with a Bachelor's Degree in Informatics and Computer Engineering
+          and master's degree in "Engineering in Electronics". I am currently studying at
+          <a href="">Rolling Scopes School</a>, improving my layout and JavaScript skills.
         </p>
       </div>
     </section>
-    <section class="contacts" id="contacts">
+    <div class="offset" id="contacts"></div>
+    <section class="contacts">
       <div class="contacts-description">
         <h2 class="contact-title">Contacts</h2>
         <hr>
@@ -57,7 +49,8 @@
         <p><b> GitHub: </b><a href="https://github.com/QwertykQwertov">QwertykQwertov</a></p>
       </div>
     </section>
-    <section class="skills" id="skills">
+    <div class="offset" id="skills"></div>
+    <section class="skills">
       <div class="skills-description">
         <h2 class="skills-title">Skills</h2>
         <hr>
@@ -88,6 +81,11 @@
             </img>
           </div>
           <div class="skill-card">
+            <img src="./assets/leaflet1.png" alt="DevExtreme icon" class="skill-img">
+            <p class="skill-name">Leaflet</p>
+            </img>
+          </div>
+          <div class="skill-card">
             <img src="./assets/git.png" alt="Git icon" class="skill-img">
             <p class="skill-name">Git</p>
             </img>
@@ -105,7 +103,8 @@
         </div>
       </div>
     </section>
-    <section class="projects" id="projects">
+    <div class="offset" id="projects"></div>
+    <section class="projects">
       <div class="projects-description">
         <h2 class="projects-title">Projects</h2>
         <hr>
@@ -170,7 +169,8 @@
         </div>
       </div>
     </section>
-    <section class="education" id="education">
+    <div class="offset" id="education"></div>
+    <section class="education">
       <h2 class="education-title">Education</h2>
       <hr>
       <div class="education-description">
@@ -194,7 +194,8 @@
   <footer>
     <div class="footer">
       <div class="footer-div empty"></div>
-      <div class="footer-div copyright"><a href="https://github.com/QwertykQwertov" target="_blank"> © 2023 by Ivan Kolesov</a></div>
+      <div class="footer-div copyright"><a href="https://github.com/QwertykQwertov" target="_blank"> © 2023 by Ivan
+          Kolesov</a></div>
       <div class="footer-div rsschool"><a href="https://rs.school/" target="_blank">RS SCHOOL</a></div>
     </div>
   </footer>
