fix: href into univesity links

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
       <hr>
       <div class="education-description">
         <p style="margin: 10px 10px 0;">University:</p>
-        <a href="#" target="_blank">Dubna State University, Russian Federation</a>
+        <a href="https://www.uni-dubna.ru/" target="_blank">Dubna State University, Russian Federation</a>
         <p class="education-text">Informatics and Computer Engineering</p>
-        <a href="#" target="_blank">Higher school of economics, Russian Federation, Moscow</a>
+        <a href="https://www.hse.ru/" target="_blank">Higher school of economics, Russian Federation, Moscow</a>
         <p class="education-text">Engineering in electronics, micro- and nanoelectronics</p>
         <p style="margin: 10px 10px 0">Courses:</p>
         <a href="https://stepik.org/course/113393/syllabus" target="_blank">Site on Wordpress, Site layout and transfer
