fix: add rsschool link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           Currently I am a programmer. I specialize in front-end web development for more than 1 year.
           Graduated with a Bachelor's Degree in Informatics and Computer Engineering
           and master's degree in "Engineering in Electronics". I am currently studying at
-          <a href="">Rolling Scopes School</a>, improving my layout and JavaScript skills.
+          <a href="https://rs.school/" target="_blank">Rolling Scopes School</a>, improving my layout and JavaScript skills.
         </p>
       </div>
     </section>
