style: change background and fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="favicon.png"><!-- 32×32 -->
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Inika&family=Roboto+Mono:ital,wght@1,100&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,100&family=Roboto+Serif:wght@200&display=swap" rel="stylesheet">
+  
+  
   <title>Ivan Kolesov</title>
 </head>
 
@@ -35,7 +41,8 @@
           Currently I am a programmer. I specialize in front-end web development for more than 1 year.
           Graduated with a Bachelor's Degree in Informatics and Computer Engineering
           and master's degree in "Engineering in Electronics". I am currently studying at
-          <a href="https://rs.school/" target="_blank">Rolling Scopes School</a>, improving my layout and JavaScript skills.
+          <a href="https://rs.school/" target="_blank">Rolling Scopes School</a>, improving my layout and JavaScript
+          skills.
         </p>
       </div>
     </section>
