style: cut projects images

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
           <div class="projects-card">
             <a href="https://qwertykqwertov.github.io/Snake-on-JS" target="_blank">
-              <img src="./assets/snake.png" alt="JS icon" class="projects-img">
+              <img src="./assets/cutSnake.png" alt="JS icon" class="projects-img">
             </a>
             <p class="projects-name">Snake on js</p>
           </div>
@@ -150,7 +150,7 @@
           </div>
           <div class="projects-card">
             <a href="https://qwertykqwertov.github.io/budgetList/dist" target="_blank">
-              <img src="./assets/budget.png" alt="Git icon" class="projects-img">
+              <img src="./assets/cutBudget.png" alt="Git icon" class="projects-img">
             </a>
             <p class="projects-name">Budget list</p>
           </div>
@@ -169,7 +169,7 @@
           </div>
           <div class="projects-card">
             <a href="https://qwertykqwertov.github.io/cssBayan/cssBayan" target="_blank">
-              <img src="./assets/accordeon.png" alt="Figma icon" class="projects-img">
+              <img src="./assets/cutAccordeon.png" alt="Figma icon" class="projects-img">
               <!-- <div class="overlay">Open deploy</div> -->
             </a>
             <p class="projects-name">Accordeon on CSS</p>
