feat: add animations on the first screen

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <header>
     <h1>Ivan Kolesov</h1>
     <nav>
-      <a class="nav-link" href="#about">About me</a>
-      <a class="nav-link" href="#contacts">Contacts</a>
-      <a class="nav-link" href="#skills">Skills</a>
-      <a class="nav-link" href="#projects">Projects</a>
-      <a class="nav-link" href="#education">Education</a>
+      <a class="nav-link" style="--i:1;" href="#about">About me</a>
+      <a class="nav-link" style="--i:2;" href="#contacts">Contacts</a>
+      <a class="nav-link" style="--i:3;" href="#skills">Skills</a>
+      <a class="nav-link" style="--i:4;" href="#projects">Projects</a>
+      <a class="nav-link" style="--i:5;" href="#education">Education</a>
     </nav>
   </header>
   <main>
