fix: edit tags with rules  validator.w3

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.png"><!-- 32×32 -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Inika&family=Roboto+Mono:ital,wght@1,100&display=swap" rel="stylesheet"> -->
@@ -31,7 +31,7 @@
     <div class="offset" id="about"></div>
     <section class="about">
       <div class="avatar">
-        <img class="avatar-image" src="./assets/avatar.jpg" alt="My photo" />
+        <img class="avatar-image" src="./assets/avatar.jpg" alt="My photo">
       </div>
       <div class="about-description">
         <h2 class="about-title">About me</h2>
@@ -66,47 +66,38 @@
           <div class="skill-card">
             <img src="./assets/html.png" alt="HTML icon" class="skill-img">
             <p class="skill-name">HTML</p>
-            </img>
           </div>
           <div class="skill-card">
             <img src="./assets/free-icon-css-3-732190.png" alt="CSS icon" class="skill-img">
             <p class="skill-name">CSS</p>
-            </img>
           </div>
           <div class="skill-card">
             <img src="./assets/free-icon-js-5968292.png" alt="JS icon" class="skill-img">
             <p class="skill-name">JavaScript</p>
-            </img>
           </div>
           <div class="skill-card">
             <img src="./assets/vue2.png" alt="Vue icon" class="skill-img">
             <p class="skill-name">Vue2</p>
-            </img>
           </div>
           <div class="skill-card">
             <img src="./assets/devextreme.png" alt="DevExtreme icon" class="skill-img">
             <p class="skill-name">DevExtreme</p>
-            </img>
           </div>
           <div class="skill-card">
             <img src="./assets/leaflet1.png" alt="DevExtreme icon" class="skill-img">
             <p class="skill-name">Leaflet</p>
-            </img>
           </div>
           <div class="skill-card">
             <img src="./assets/git.png" alt="Git icon" class="skill-img">
             <p class="skill-name">Git</p>
-            </img>
           </div>
           <div class="skill-card">
             <img src="./assets/linux.png" alt="Linux icon" class="skill-img">
             <p class="skill-name">Linux</p>
-            </img>
           </div>
           <div class="skill-card">
             <img src="./assets/figma.png" alt="Figma icon" class="skill-img">
             <p class="skill-name">Figma</p>
-            </img>
           </div>
         </div>
       </div>
@@ -165,7 +156,6 @@
               <img src="./assets/plants.png" alt="Figma icon" class="projects-img">
             </a>
             <p class="projects-name">Plants</p>
-            </img>
           </div>
           <div class="projects-card">
             <a href="https://qwertykqwertov.github.io/cssBayan/cssBayan" target="_blank">
