refactor: clean code with rules validator w3c

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Inika&family=Roboto+Mono:ital,wght@1,100&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,100&family=Roboto+Serif:wght@200&display=swap" rel="stylesheet">
-  
-  
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,100&family=Roboto+Serif:wght@200&display=swap"
+    rel="stylesheet">
   <title>Ivan Kolesov</title>
 </head>
-
 <body>
   <header>
     <h1>Ivan Kolesov</h1>
@@ -160,7 +158,6 @@
           <div class="projects-card">
             <a href="https://qwertykqwertov.github.io/cssBayan/cssBayan" target="_blank">
               <img src="./assets/cutAccordeon.png" alt="Figma icon" class="projects-img">
-              <!-- <div class="overlay">Open deploy</div> -->
             </a>
             <p class="projects-name">Accordeon on CSS</p>
           </div>
@@ -192,11 +189,10 @@
   <footer>
     <div class="footer">
       <div class="footer-div empty"></div>
-      <div class="footer-div copyright"><a href="https://github.com/QwertykQwertov" target="_blank"> © 2023 by Ivan
+      <div class="footer-div copyright"><a href="https://github.com/QwertykQwertov" target="_blank">© 2023 by Ivan
           Kolesov</a></div>
       <div class="footer-div rsschool"><a href="https://rs.school/" target="_blank">RS SCHOOL</a></div>
     </div>
   </footer>
 </body>
-
 </html>
