refactor: clean code with rules validator w3c

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Inika&family=Roboto+Mono:ital,wght@1,100&display=swap" rel="stylesheet"> -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,100&family=Roboto+Serif:wght@200&display=swap"
     rel="stylesheet">
@@ -18,11 +17,11 @@
   <header>
     <h1>Ivan Kolesov</h1>
     <nav>
-      <a class="nav-link" style="--i:1;" href="#about">About me</a>
-      <a class="nav-link" style="--i:2;" href="#contacts">Contacts</a>
-      <a class="nav-link" style="--i:3;" href="#skills">Skills</a>
-      <a class="nav-link" style="--i:4;" href="#projects">Projects</a>
-      <a class="nav-link" style="--i:5;" href="#education">Education</a>
+      <a class="nav-link nav-link-1" href="#about">About me</a>
+      <a class="nav-link nav-link-2" href="#contacts">Contacts</a>
+      <a class="nav-link nav-link-3" href="#skills">Skills</a>
+      <a class="nav-link nav-link-4" href="#projects">Projects</a>
+      <a class="nav-link nav-link-5" href="#education">Education</a>
     </nav>
   </header>
   <main>
@@ -169,12 +168,12 @@
       <h2 class="education-title">Education</h2>
       <hr>
       <div class="education-description">
-        <p style="margin: 10px 10px 0;">University:</p>
+        <p  class="education-subtitle">University:</p>
         <a href="https://www.uni-dubna.ru/" target="_blank">Dubna State University, Russian Federation</a>
         <p class="education-text">Informatics and Computer Engineering</p>
         <a href="https://www.hse.ru/" target="_blank">Higher school of economics, Russian Federation, Moscow</a>
         <p class="education-text">Engineering in electronics, micro- and nanoelectronics</p>
-        <p style="margin: 10px 10px 0">Courses:</p>
+        <p  class="education-subtitle">Courses:</p>
         <a href="https://stepik.org/course/113393/syllabus" target="_blank">Site on Wordpress, Site layout and transfer
           to CMS</a>
         <a href="https://stepik.org/course/63054/promo#toc" target="_blank">Interactive SQL Trainer</a>
